--- a/views/user_password_form.jade
+++ b/views/user_password_form.jade
@@ -1,6 +1,6 @@
-h1 Create a new user
+h1= title
 
-form(action='/new_user', method='POST')
+form(action=action, method='POST')
   label(for='login') Login
   input(name='login', id='login')
   br
@@ -8,3 +8,6 @@ form(action='/new_user', method='POST')
   input(name='password', id='password', type='password')
   br
   input(type='submit')
+  - if(show_create_account)
+    div
+      a(href='/new_user') Create Account
